styling at the moment

--- a/storetask/src/App.css
+++ b/storetask/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.main {
+  display: block;
+  background-color: #9d9d9d;
+  margin: 0px;
+  padding: 0px;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-bar {
+  display: block;
+  background-color: #333333;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-bar img {
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.nav-bar h1 {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.products-list {
+  display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product-item {
+  display: inline-block;
+}
+
+.product-image {
+  height: 300px;
+  width: auto;
+}
+
+.product-title {
+}
+
+.product-price {
 }
